# license-validator

./: .env  .gitignore  README.md  pyproject.toml
license_validator/: core.py
